 o Corrected a bug in DateTime that was causing -1 to be stored as the time
   component of a DATETIME field for a Date value.
 o Applied Mike's patch [1210936] Change byte array to string conversions; the
   patch changes the way byte[] to String conversions are made (now hex values
   are returned) and also a bug with SELECT DISTINCT not working with Sybase.

05/27/2005 - Alin Sinpalean
 o Added initial support for fast forward only cursors.
 o Corrected yet another cancel synchronization issue caused by the end of
   response flag not being reset when a cancel packet was sent.
 o Corrected an issue causing hidden columns to "become visible" in result set
   meta data obtained from prepared statements.
 o Corrected bug [1209039] jTDS can deadlock when used with C3P0 connection
   pooling; unnecessary synchronization on statements caused deadlocks.

05/25/2005 - Alin Sinpalean
 o Applied Mike's last patch posted in RFE tracker [1172683] Improve the
   performance of Prepared Statements. The patch implements metadata caching
   and removes support for sp_prepexec and sp_cursorprepexec (prepareSQL=4).

05/20/2005 - Alin Sinpalean
 o Corrected bug [1204658] Conversion from Number to BigDecimal causes data
   corruption.
 o BigDecimal to String conversion no longer drops insignificant trailing
   zeroes.

05/11/2005 - Alin Sinpalean
 o Corrected bug [1200027] Enhancement: Change how Properties keys are
   determined.
 o Added serialVersionUID to JtdsDataSource.

05/10/2005 - Alin Sinpalean
 o Applied Mike's patch [1197446] Optimized handling of datetime values.
 o Applied Mike's patch with SQLParser improvements, posted in RFE [1172683]
   Improve the performance of Prepared Statements.
 o Applied Mike's fix for bug [1197603] Cursor downgrade error in
   CachedResultSet and added a test case.

05/09/2005 - David Kilzer
 o Made the error.connection.autocommit message in ConnectionJDBC2 specific to